@@ -448,7 +448,8 @@ sub form_header {
     $form->hide_form(
         qw(form_id id type printed emailed queued title vc terms discount 
            creditlimit creditremaining tradediscount business closedto locked 
-           shipped oldtransdate recurring reverse batch_id subtype)
+           shipped oldtransdate recurring reverse batch_id subtype 
+           meta_number)
     );
 
     if ($form->{notice}){
@@ -502,11 +503,26 @@ sub form_header {
 		      <td class="plus$n" nowrap>|
       . $form->format_amount( \%myconfig, $form->{creditremaining}, 0, "0" )
       . qq|</td>
-		    </tr>
+		    </tr>|;
+		if ($form->{entity_control_code}){
+                    $form->hide_form(qw(entity_control_code meta_number));
+			print qq|
+	        <tr>
+		<th align="right" nowrap>| . 
+			$locale->text('Entity Code') . qq|</th>
+		<td colspan="2">$form->{entity_control_code}</td>
+		<th align="right" nowrap>| . 
+			$locale->text('Account') . qq|</th>
+		<td colspan=3>$form->{meta_number}</td>
+	      </tr>
+		|;
+	       }
+	print qq|
 		    $business
 		  </table>
 		</td>
 	      </tr>
+
 	      <tr>
 		<th align="right" nowrap>| . $locale->text('Record in') . qq|</th>
 		<td colspan="3"><select name="AR">$form->{selectAR}</select></td>
